--- a/style.css
+++ b/style.css
@@ -3,21 +3,21 @@
     margin-bottom: 20px;
     width: 100%;
     height: 100px;
- 
-    
+
+
 }
 #info_center{
     margin: auto;
     width: 60%;
-  
+
     padding: 10px;
     text-align: center;
-    
-   
+
+
 }
 #center_help{
     height: 70px;
-  
+
     width: 50%;
     margin: auto;
 }
@@ -35,8 +35,8 @@
     margin: auto;
     width: 50%;
     height: auto;
-    
-    
+
+
 
 }
 .tables{
@@ -46,27 +46,27 @@
     padding-bottom: 10px;
     float: left;
     margin:10px;
-    
-   
+
+
     border: none;
     color: white;
-   
+
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-   
-    
+
+
 }
 .tables p{
    text-align: center;
-    
-    
+
+
 }
 
 
-.free{
-    background-color: #008CBA;  
+.free, img{
+    background-color: #008CBA;
     cursor: pointer;}
 
 .booked{
@@ -87,5 +87,5 @@ cursor: not-allowed;}
 
 .ola{
     color: aquamarine !important;
-    
+
 }
